# c15

./: 01_get_data.py  02_profile_data.py  03_create_db_pipeline.py  README.md  pyproject.toml  utils.py
data/: weather_data.db  weather_parsed.csv
src/: create_db_pipeline.py  get_data.py  plot_time_series.py  profile_data.py  utils.py
validation/: validate_database.py  validate_geocoded_data.py
