[project]
name = "c15"
version = "0.1.0"
description = "This project aims to solve interview tasks for C15 Sr Data Engineer interview"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "pandas==2.3",
    "numpy==1.26",
    "sqlalchemy==2.0.23",
    "geopy==2.4.0",
    "tqdm==4.66.1",
    "scikit-learn==1.3.0",
    "matplotlib==3.7.2",
    "tabulate",
    "ydata-profiling>=4.15.1",
    "plotly",
]
